samples/_failures_safe/1761170234_7138ec_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fb9f52a1.c: In function ‘print_tokens’:
./samples/SAFE/__tmp_fb9f52a1.c:160:43: error: missing terminating " character
  160 |             case TOKEN_STRING: type_str = "
      |                                           ^
./samples/SAFE/__tmp_fb9f52a1.c:160:13: error: expected expression at end of input
  160 |             case TOKEN_STRING: type_str = "
      |             ^~~~
./samples/SAFE/__tmp_fb9f52a1.c:160:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_fb9f52a1.c:160:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_fb9f52a1.c:160:13: error: expected declaration or statement at end of input
